added image and list

--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
   <head> HTML stretch</head>
     <title> Strettttchhhh</title>
       <body>
+        <h1> HTML is fun</h1>
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRo9Y-kXr7lhF0POTt4-6kU0vAFawMDG8qZmA&s"
+          alt="guy sitting at computer"/>
 
+            <h2> why is this fun</h2>
+              <ol>
+                <li>computers are fun </li>
+                <li> typing </li>
+              </ol>
 
 
 
